# SuperPitchMonitor

./: .gitattributes  .gitignore  BUILD_MACOS.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  LICENSE  MIGRATE_TO_FETCHCONTENT.md  README.md  README_GIT.md  conda_environment.yml
Docs/: CrossPlatform.md  DOCS_REORGANIZATION.md  README.md
Docs/01_TechnicalAnalysis/: 技术可行性分析报告.md
Docs/02_Architecture/: 系统架构设计.md
Docs/03_Algorithms/PitchDetection/: 多音高检测算法设计.md
Docs/03_Algorithms/SpectrumAnalysis/: 频谱分析算法设计.md
Docs/03_Audio_System/: TEST_AUDIO_FILES_DESIGN.md
Docs/04_Platform/: Android平台适配与性能优化.md  CrossPlatform_Development_Strategy.md  CrossPlatform_Setup_Summary.md  Migration_Complete.md  Migration_Example.md
Docs/05_UI/: UI设计与交互规范.md  WaterfallPitches自动追踪设计.md  WaterfallPitches跨平台用户交互设计.md
Docs/06_Development/: Dependency_Management.md  Logging_System.md  Test_Framework_Architecture.md  开发路线图.md
Docs/07_Build/: BUILD_FIX_SUMMARY.md  BuildGuide.md  Build_Scripts_Reference.md  CMAKE_FIX_SUMMARY.md  DebugGuide.md  FINAL_BUILD_FIX.md  QUICK_VERIFY.md  REBUILD_INSTRUCTIONS.md
Docs/08_Environment/: Android_Studio_Guide.md  VS2022_CodeSnippets.md  VS2022_Development_Guide.md  VS2022_LAUNCH_FIX.md  VS2022_QUICK_REFERENCE.md  VS2022_SETUP_COMPLETE.md
Docs/09_Troubleshooting/: Android_JSON_Error_Fix.md  Android模拟器调试重启问题排查指南.md  CRASH_LOGGING.md  UI_NOT_SHOWING_FIX.md
Docs/10_Features/: Audio_Input_Features.md  Debug_Logging_Guide.md  Feature_Complete_Summary.md  New_Features_Summary.md
Docs/11_MachineLearningSolution/: Loss_Function_Update.md  TODO_Implementation_Plan.md  Technical_Solution_Report_v1.0.md  Training_Data_Generation.md
Docs/test_reports/: detailed_test_report.html  polyphonic_detection_debug.md  test_report_final.md
MLModel/: PitchNetBaseline_20260219_230906.txt
Resources/TestAudio/: README.md  test_ground_truth.json
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
Source/Algorithms/: FFTUtils.h  HarmonicClustering.h  PeakDetector.cpp  PeakDetector.h  YINProcessor.h
Source/Audio/: AudioBufferFifo.h  AudioEngine.cpp  AudioEngine.h  AudioInputSource.h  DeviceAudioInput.cpp  DeviceAudioInput.h  FileAudioInput.cpp  FileAudioInput.h  MultiResolutionAnalyzer.cpp  MultiResolutionAnalyzer.h  NonlinearFourierAnalyzer.cpp  NonlinearFourierAnalyzer.h  PitchTracker.cpp  PitchTracker.h  PolyphonicDetector.cpp  PolyphonicDetector.h  QuickPitchDetector.cpp  QuickPitchDetector.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SpectrumData.h  SystemAudioInput.cpp  SystemAudioInput.h  TestPolyphonicDetection.cpp  YinPitchDetector.cpp  YinPitchDetector.h
Source/Debug/: AudioSimulator.cpp  AudioSimulator.h  DebugControlPanel.cpp  DebugControlPanel.h
Source/MLAlgorithm/: CMakeLists.txt  MLPitchDetector.cpp  MLPitchDetector.h  README.md  RingBuffer.h  test_mlpitch.cpp
Source/MLTraining/: DATASET_FORMAT.md  ENVIRONMENT.md  environment.yml  test_streaming.py  train_simple.py
Source/MLTraining/Model/: PitchNetBaseline.py  PitchNetEnhanced.py  PitchNetEnhancedV2.py  PitchNetEnhancedV3.py  PitchNetEnhancedV4.py
Source/MLTraining/config/: environment.yml  setup_env.sh
Source/MLTraining/data_generation/: __init__.py  dataset_writer.py  energy_calculator.py  generate_dataset.applescript  generate_in_terminal.py  generate_noise_dataset.py  generate_note.py  generate_polyphony.py  generate_sanity.py  generate_sanity_with_noise_dataset.py  run_in_terminal.sh  sample_generator.py  test_noise.py  timbre_loader.py
Source/MLTraining/training/: config_parser.py  data_utils.py  dataset.py  dataset_shards.py  loss.py  modeloutput_utils.py  run_training_windows.bat  run_training_windows.ps1  test_loader.py  test_train.py  train.py  train_config_utils.py  train_debugnoise.py  train_live.py  train_test.py  trainconfig.txt  trainconfig_example.txt  training_util.py  visualize_data.py
Source/Test/: AutoTestManager.cpp  AutoTestManager.h  TestServer.cpp  TestServer.h
Source/UI/: InputSourceSelector.cpp  InputSourceSelector.h  PitchCard.cpp  PitchCard.h  PitchDisplay.cpp  PitchDisplay.h  PitchWaterfallDisplay.cpp  PitchWaterfallDisplay.h  SettingsPanel.cpp  SettingsPanel.h  SpectrumDisplay.cpp  SpectrumDisplay.h  TunerDisplay.cpp  TunerDisplay.h
Source/Utils/: AudioUtils.h  AutoTracker.cpp  AutoTracker.h  Config.h  Logger.cpp  Logger.h  MidiUtils.h  PerformanceMonitor.h  PlatformUtils.cpp  PlatformUtils.h  PlatformUtils_Android.cpp  PlatformUtils_Windows.cpp  PlatformUtils_iOS.mm
TrainingData/: README.md  timbre_profiles.json
scripts/: README.md  auto_build.ps1  build_android.bat  build_android_fix.ps1  build_now.bat  build_windows.bat  check_cross_platform.ps1  check_system_health.ps1  fix_android_json_error.ps1  open_vs2022.bat  optimize_emulator.ps1  quick_start.bat  setup_android_sdk.ps1  verify_environment.ps1
scripts/audio/: generate_all_tests.py  generate_harmonic_chords.py  generate_orchestral_test.py  generate_test_signals.py
scripts/test/: README.md  generate_test_report.py  test_client.py  test_client_with_fft.py  test_detailed_analysis.py  test_full_analysis.py  test_polyphonic.py
scripts/utils/: analyze_cmake.py  check_encoding.py  check_full.py  fix_cmake.py  view_cmake.py
